changed name and added a photo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Holy cow!</title>
+<title>Huijuan Zhang</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Home</a>
+      <a class="navbar-brand" href="index.html">Huijuan Zhang</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -203,15 +203,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Holy cow!</h1>
+<h1 class="title toc-ignore">Huijuan Zhang</h1>
 
 </div>
 
 
-<div id="i-have-a-webpage" class="section level3">
-<h3>I have a webpage!</h3>
-<p>And I can put all kinds of stuff on it!</p>
-</div>
+<p>It’s a product of Data Science I homework 4!</p>
+<p><img src="images/photo.jpeg" style="width:50%"></p>
 
 
 
