landing page intro

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
+<link href="site_libs/highlightjs-1.1/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-1.1/highlight.js"></script>
 <link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
@@ -67,6 +67,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="styles.css" type="text/css" />
 
 </head>
 
@@ -180,16 +181,16 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="resume.html">Resume</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="mailto:&lt;huijuanzhang13@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="http://github.com/HuijuanZhang/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -208,8 +209,17 @@ $(document).ready(function () {
 </div>
 
 
-<p>It’s a product of Data Science I homework 4!</p>
-<p><img src="images/photo.jpeg" style="width:50%"></p>
+<div id="ms-candidate-in-biostatistics-at-columbia-university" class="section level4">
+<h4><em>MS Candidate in Biostatistics at Columbia University</em></h4>
+<br><br>
+<center>
+<img src="images/photo.jpeg" style="width:50%">
+</center>
+<p><br><br></p>
+<div id="i-received-bs-in-chemistry-in-fudan-university-in-2017-and-now-am-a-first-year-student-majoring-in-biostatistics-in-columbia-university-mailman-school-of-public-health." class="section level5">
+<h5>I received BS in chemistry in <a href="http://www.fudan.edu.cn/en/">Fudan University</a> in 2017 and now am a first year student majoring in biostatistics in <a href="https://www.mailman.columbia.edu">Columbia University, Mailman School of Public Health</a>.</h5>
+</div>
+</div>
 
 
 
