--- a/resume.html
+++ b/resume.html
@@ -225,23 +225,25 @@ New York, NY | May 2019
 <li><strong>Relevant courses</strong>: Data Science I (Using R), Biostatistical Methods I. Biostatistical Methods II (Generalized Linear Models, Survival Analysis), Statistical Machine Learning (Using Python), Pharmaceutical Statistics (Using SAS), etc. (Spring 2018)</li>
 </ul>
 <p align="right">
-Shanghai, China | Sep 2013 - June 2017
+Shanghai, China | June 2017
 </p>
 <p><strong>Fudan University</strong>, <em>Department of Chemistry</em></p>
 <p>Chemistry, <em>Bachelor of Science</em></p>
 <ul>
-<li><p><strong>Honors and Awards</strong>: Excellent Student of Fudan University, 2013-2014; Third Prize of Excellent Undergraduate Scholarship, etc.</p></li>
 <li><p><strong>Relevant Courses</strong>: Python Programming, C Programming, Advanced Mathematics, Probability Theory and Mathematical Statistics, etc.</p></li>
-<li><p><strong>Publications</strong>:</p>
-<ul>
-<li><p>Jie Pan, Hong Yuan, Xiaoxue Zhang, <strong>Huijuan Zhang</strong>, Qiming Xu, Yajun Zhou, Zhongxian Huang, Xiangshi Tan. Probing the Molecular Mechanism of Human Soluble Guanylate Cyclase Activation by NO in vitro and in vivo. <em>Sci. Rep</em>. <strong>7</strong>, 43112 (2017).</p></li>
-<li><p>Jie Pan, Xiaoxue Zhang, Hong Yuan, Qiming Xu, <strong>Huijuan Zhang</strong>, Yajun Zhou, Zhong-Xian Huang, Xiangshi Tan. The molecular mechanism of heme loss from oxidized soluble guanylate cyclase induced by conformational change. <em>Biochim Biophys Acta</em> <strong>1864</strong>, 488–500 (2016).</p></li>
-</ul></li>
+<li><p><strong>Honors and Awards</strong>: Excellent Student of Fudan University, 2013-2014; Third Prize of Excellent Undergraduate Scholarship, etc.</p></li>
 </ul>
 <hr />
 </div>
-<div id="programming-experience" class="section level3">
-<h3>Programming Experience</h3>
+<div id="academic-project" class="section level3">
+<h3>Academic Project</h3>
+<p align="right">
+New York, NY | Dec 2017
+</p>
+<p><strong>R Programming Course Project,</strong> <em>Data Analysis and Visualization</em></p>
+<ul>
+<li>Collaborated with group members to clean and perform exploratory analyses to database US mass shooting released by Stanford University. Provided insights to mass shooting problem and visualized results by hosting websites in GitHub and Shinyapps.io.</li>
+</ul>
 <p align="right">
 Shanghai, China | May 2017
 </p>
@@ -251,63 +253,55 @@ Shanghai, China | May 2017
 </ul>
 <hr />
 </div>
-<div id="internship-experience" class="section level3">
-<h3>Internship Experience</h3>
+<div id="professional-experience" class="section level3">
+<h3>Professional Experience</h3>
 <p align="right">
 Shanghai, China | Oct 2016 - Nov 2016
 </p>
-<p><strong>Shanghai JiaoFu Biomedical Technology Co., Ltd</strong>, <em>Network Meta-Analysis</em></p>
+<p><strong>Shanghai JiaoFu Biomedical Technology Co., Ltd</strong>, <em>Analysis Intern</em></p>
 <ul>
-<li><p>Searched project relevant meta-analysis documents through databases such as PubMed and Embase by medical subject headings and entry terms. Retrieved studies included in the meta-analysis documents and added other latest studies as a complement.</p></li>
-<li><p>Extracted data from Randomized Controlled Trials and reorganized it. Employed GeMTC to get Consistency Model and Rank Probability. Used GraphPad Prism to attain graphs of SUCRA with Cumulative Probability. Obtained Network Plots, Forest Plots and Node-Splitting Plots from R (with RStudio). Applied STATA to get Funnel plots and perfected the graphs by AI.</p></li>
-<li><p>Described the results obtained from data analysis and wrote a discussion of it.</p></li>
+<li><p>Searched and retrieved project relevant documents through several databases. Extracted and cleaned data from randomized controlled trials. Employed R for modeling and graphing software to attain plots. Described results and wrote discussion.</p></li>
+<li><p>Discussed with colleagues to work out solutions to problems during course of project.</p></li>
 </ul>
-<hr />
-</div>
-<div id="research-experience" class="section level3">
-<h3>Research Experience</h3>
 <p align="right">
 Jerusalem, Israel | Jul 2016 - Aug 2016
 </p>
-<p><strong>2016 Summer Research</strong>, University of Hebrew, <em>upervisor: Dr. Einav Gross</em></p>
-<p><strong>Project</strong>: Single Nucleotide Polymorphism (SNP) mapping of three mutants of <em>C. elegans</em></p>
+<p><strong>University of Hebrew</strong>, School of Medicine, <em>Student Researcher</em></p>
 <ul>
-<li><p>Operated with model organism <em>C. elegans</em>, including maintenance, heat shock, crossing and bordering assay. Selected SNPs and designed primers for mapping. Examined the positions of the mutations. Applied different methods including further interval mapping, sequencing and fluorescence detection to different mutants according to initial results.</p></li>
-<li><p>Analyzed the results of each step through calculation, alignment and comparison with several databases.</p></li>
+<li><p>Adapted fast to new environment and built good relationship with people from different cultures.</p></li>
+<li><p>Quickly learned about new project and got familiar with all experimental operations. Designed and implemented experiments to examine position of mutation. Analyzed results by calculation and comparison with databases. Got encouraging preliminary results which were used to launch next project.</p></li>
+<li><p>Presented all works to research group members and obtained high appraisal from supervisor.</p></li>
 </ul>
 <p align="right">
 Shanghai, China | Dec 2014 – Jun 2017
 </p>
-<p><strong>The Student Scientific Innovation Act</strong>, Fudan University, <em>Supervisor: Prof. Xiangshi Tan</em></p>
-<p><strong>Project</strong>: Molecular Mechanism of Heme Loss from Oxidized Soluble Guanylate Cyclase Induced by Conformational Change</p>
+<p><strong>Fudan University</strong>, Department of Chemistry, <em>The Student Scientific Innovation Act</em></p>
 <ul>
-<li><p>Performed transformation to get E. coli colonies with recombinant bacmid. Transfected and amplified baculovirus stock. Trial-expressed protein and assayed the expression product. Expressed and characterized recombinant protein by Spodoptera frugiperda 9 cells.</p></li>
-<li><p>Published two papers as a co-author.</p></li>
+<li>Operated and maintained baculovirus expression systems of whole laboratory. Cooperated with lab members to express and characterize recombinant protein. Published 2 papers as co-author.</li>
 </ul>
 <p align="right">
 College Station, US | Aug 2015
 </p>
-<p><strong>2015 Summer Research</strong>, Texas A&amp;M University, <em>Supervisor: Prof. Guan Zhu</em></p>
-<p><strong>Project</strong>: Gene Knockout of <em>Clostridium difficile</em></p>
+<p><strong>Texas A&amp;M University</strong>, College of Veterinary Medicine, <em>Student Researcher</em></p>
 <ul>
-<li>Applied CRISPR-Cas 9 system to knockout specific gene. Identified the gene positions of Acs/CODH and designed gRNA. Selected resistance marker to construct DNA editing templates. Designed primers for PCR by Primer-BLAST, ePrime and Beacon Designer.</li>
+<li>Learned about new genetic method by reading scientific papers. Wrote proposal of its application in order to study gene function in specific bacteria that cause colitis.</li>
 </ul>
 <hr />
 </div>
-<div id="leadership-and-extracurricular-activities" class="section level3">
-<h3>Leadership and Extracurricular Activities</h3>
+<div id="leadership-experience" class="section level3">
+<h3>Leadership Experience</h3>
 <p align="right">
 Shanghai, China | Sep 2013 - Jul 2015
 </p>
-<p><strong>Organization Department, Youth League Committee, Fudan University</strong>, Assistant Minister</p>
+<p><strong>Youth League Committee, Fudan University</strong>, Assistant Minister</p>
 <ul>
-<li>Organized the Annual Conference of Excellent Student Assessment, Fudan University and the Annual China’s Youth Awarding Ceremony, Fudan University. Managed daily routine in Organization Department.</li>
+<li>Organized Annual Conference of Excellent Student Assessment, Fudan University and Annual China’s Youth Awarding Ceremony, Fudan University. Managed daily routine in Organization Department.</li>
 </ul>
 <hr />
 </div>
 <div id="skills" class="section level3">
 <h3>Skills</h3>
-<p>Currently learning R programming; Some knowledge of Python programming, C programming; Strong knowledge of MS Office (Word, Excel, PowerPoint). Chinese (Native).</p>
+<p>R programming; Python programming; Some knowledge of SQL, SAS and C programming; Strong knowledge of MS Office (Word, Excel, PowerPoint). Chinese (Native).</p>
 </div>
 
 
